--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -275,19 +275,23 @@ jobs:
 
   build-pyfunc-server:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["37", "38", "39", "310"]
     needs:
       - create-version
     steps:
       - uses: actions/checkout@v2
-      - name: Build Pyfunc Server Docker
-        run: docker build -t merlin-pyfunc-base:${{ needs.create-version.outputs.version }} -f python/pyfunc-server/base.Dockerfile python
-      - name: Save Pyfunc Server Docker
-        run: docker image save --output merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar merlin-pyfunc-base:${{ needs.create-version.outputs.version }}
-      - name: Publish Pyfunc Server Docker Artifact
+      - name: Build Pyfunc Server Docker py${{ matrix.python-version }}
+        run: docker build -t merlin-pyfunc-base-py${{ matrix.python-version }}:${{ needs.create-version.outputs.version }} -f python/pyfunc-server/docker/base${{ matrix.python-version }}.Dockerfile python
+      - name: Save Pyfunc Server Docker py${{ matrix.python-version }}
+        run: docker image save --output merlin-pyfunc-base-py${{ matrix.python-version }}.${{ needs.create-version.outputs.version }}.tar merlin-pyfunc-base-py${{ matrix.python-version }}:${{ needs.create-version.outputs.version }}
+      - name: Publish Pyfunc Server Docker Artifact py${{ matrix.python-version }}
         uses: actions/upload-artifact@v2
         with:
-          name: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
-          path: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
+          name: merlin-pyfunc-base-py${{ matrix.python-version }}.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-pyfunc-base-py${{ matrix.python-version }}.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build-transformer:
