--- a/python/pyfunc-server/docker/env310.yaml
+++ b/python/pyfunc-server/docker/env310.yaml
@@ -3,6 +3,6 @@ dependencies:
   - python=3.10
   - pip=20.2.4
   - pip:
-      - -r file:requirements.txt
+      - -r file:../requirements.txt
       - --extra-index-url=https://test.pypi.org/simple
       - --trusted-host=test.pypi.org
