--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,15 +88,19 @@ jobs:
   
   publish-pyfunc:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["37", "38", "39", "310"]
     steps:
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-pyfunc-base.${{ inputs.version }}.tar
+          name: merlin-pyfunc-base-py${{ matrix.python-version }}.${{ inputs.version }}.tar
       - name: Retag and Push Docker Image
         run: |
-          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}/gojek/merlin-pyfunc-base:${{ inputs.version }}"
+          IMAGE_TAG="${{ env.DOCKER_REGISTRY }}/gojek/merlin-pyfunc-base-py${{ matrix.python-version }}:${{ inputs.version }}"
           docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.ghcr_token }}
-          docker image load --input merlin-pyfunc-base.${{ inputs.version }}.tar
-          docker tag merlin-pyfunc-base:${{ inputs.version }} ${IMAGE_TAG}
+          docker image load --input merlin-pyfunc-base-py${{ matrix.python-version }}.${{ inputs.version }}.tar
+          docker tag merlin-pyfunc-base-py${{ matrix.python-version }}:${{ inputs.version }} ${IMAGE_TAG}
           docker push ${IMAGE_TAG}
