--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -3,7 +3,7 @@ numpy >= 1.8.2
 cloudpickle==2.0.0
 prometheus_client==0.14.1
 uvloop>=0.15.2
-orjson==2.6.8
+orjson>=2.6.8
 tornado
 caraml-upi-protos
 # Starting 1.49.0, grpc uses protobuf 4.X which are incompatible with most of our dependencies
