--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -219,7 +219,7 @@ merlin:
       },
     ]
 
-    upiDocURL: "http://sample.doc.com"
+    upiDocURL: "https://github.com/caraml-dev/universal-prediction-interface/blob/main/docs/api_markdown/caraml/upi/v1/index.md"
 
     # Comma-separated value of Docker registries that can be chosen in deployment page
     dockerRegistries: ghcr.io/gojek,ghcr.io/your-company
