--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -181,11 +181,11 @@ spec:
           - name: DEFAULT_FEAST_SOURCE
             value: {{ .Values.merlin.transformer.feast.defaultFeastSource}}
           - name: FEAST_SERVING_KEEP_ALIVE_ENABLED
-            value: {{ .Values.merlin.transformer.feast.grpc.keepAliveEnabled }}
+            value: "{{ .Values.merlin.transformer.feast.grpc.keepAliveEnabled }}"
           - name: FEAST_SERVING_KEEP_ALIVE_TIME
-            value: {{ .Values.merlin.transformer.feast.grpc.keepAliveTime }}
+            value: "{{ .Values.merlin.transformer.feast.grpc.keepAliveTime }}"
           - name: FEAST_SERVING_KEEP_ALIVE_TIMEOUT
-            value: {{ .Values.merlin.transformer.feast.grpc.keepAliveTimeout }}
+            value: "{{ .Values.merlin.transformer.feast.grpc.keepAliveTimeout }}"
           - name: SIMULATION_FEAST_REDIS_URL
             value: {{ .Values.merlin.transformer.simulation.feastRedisServingURL}}
           - name: SIMULATION_FEAST_BIGTABLE_URL
