--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
           twine upload dist/*
 
   publish-merlin-pyfunc-server:
+    # TODO(arief): Uncomment this once testing complete
     # if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
@@ -66,6 +67,7 @@ jobs:
           twine upload dist/*
 
   publish-merlin-batch-predictor:
+    # TODO(arief): Uncomment this once testing complete
     # if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
