--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -282,7 +282,7 @@ jobs:
           path: merlin.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
-  build-batch-predictor-base:
+  build-batch-predictor-base-image:
     runs-on: ubuntu-latest
     needs:
       - create-version
@@ -302,7 +302,7 @@ jobs:
           path: merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
-  build-pyfunc-server-base:
+  build-pyfunc-server-base-image:
     runs-on: ubuntu-latest
     needs:
       - create-version
@@ -314,6 +314,14 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build Pyfunc Server Base Docker
         run: docker build -t ${{ env.DOCKER_IMAGE_TAG }} -f python/pyfunc-server/docker/base.Dockerfile python
+      - name: Test Build Pyfunc Server Docker
+        run: |
+          docker build -t "test-pyfunc-server:1" \
+            -f python/pyfunc-server/docker/local.Dockerfile \
+            --build-arg BASE_IMAGE=${{ env.DOCKER_IMAGE_TAG }} \
+            --build-arg MODEL_DEPENDENCIES_URL=pyfunc-server/test/local-artifacts/conda.yaml \
+            --build-arg MODEL_ARTIFACTS_URL=pyfunc-server/test/local-artifacts \
+            python
       - name: Save Pyfunc Server Base Docker
         run: docker image save --output merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar ${{ env.DOCKER_IMAGE_TAG }}
       - name: Publish Pyfunc Server Base Docker Artifact
@@ -501,8 +509,8 @@ jobs:
     needs:
       - create-version
       - build-api
-      - build-batch-predictor-base
-      - build-pyfunc-server-base
+      - build-batch-predictor-base-image
+      - build-pyfunc-server-base-image
       - build-observation-publisher
       - test-python-sdk
       # TODO(arief): Uncomment this
